Arrumando cores e linha do tempo

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -232,7 +232,7 @@
   "footer": {
     "quickLinks": "Quick Links",
     "contact": "Contact",
-    "copyright": "© 2025 Luiz Antonio Comiran Bueno. All rights reserved. Built with Next.js and lots of ☕."
+    "copyright": "© 2025 Lacb. All rights reserved. Built with Next.js and lots of ☕."
   },
   "auth": {
     "signIn": "Sign in",
