--- a/public/locales/pt/common.json
+++ b/public/locales/pt/common.json
@@ -232,7 +232,7 @@
   "footer": {
     "quickLinks": "Links Rápidos",
     "contact": "Contato",
-    "copyright": "© 2025 Luiz Antonio Comiran Bueno. Todos os direitos reservados."
+    "copyright": "© 2025 Lacb.<br />Todos os direitos reservados."
   },
   "auth": {
     "signIn": "Entrar",
