--- a/public/locales/pt/common.json
+++ b/public/locales/pt/common.json
@@ -3,8 +3,8 @@
     "home": "Início",
     "about": "Sobre",
     "projects": "Projetos",
-    "blog": "Blog"
-
+    "blog": "Blog",
+    "contact": "Contato"
   },
   "home": {
     "title": "Prazer, eu sou",
